--- a/packages/card/src/scss/_global.scss
+++ b/packages/card/src/scss/_global.scss
@@ -29,7 +29,7 @@
       flex-direction: row;
       padding-bottom: 1rem;
       border: none;
-      border-bottom: 1px solid core.$uq-neutral-light60;
+      border-bottom: 1px solid core.$grey-200;
       box-shadow: 0 core.$space-xs core.$space-xs
         rgba(core.$uq-neutral-dark80, 0);
 
