--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -192,7 +192,7 @@ $use-encapsulation: false !default;
     }
 
     &--error {
-      color: core.$alert;
+      color: core.$red;
     }
 
     // Text size
