--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -43,7 +43,7 @@ html {
 // Dark tint layer provides a black tint
 %dark-tint {
   @extend %tint;
-  background-color: $dark-tint-bg;
+  background-color: $grey-900;
 
   &::before {
     @extend %tint-overlay;
@@ -72,37 +72,37 @@ html {
 
 // Light
 %light-palette {
-  border-color: $light-palette-border-color;
-  color: $light-palette-color;
+  border-color: $grey-200;
+  color: $grey-50;
 
   a {
-    color: $light-palette-link-color;
+    color: $white;
     font-weight: $font-weight-normal;
 
     &:hover {
-      color: darken($light-palette-link-color, 10%);
+      color: $grey-50;
     }
   }
 }
 
 %light-palette-bg {
-  background-color: $light-palette-bg;
+  background-color: $white;
 }
 
 // Dark
 %dark-palette {
-  border-color: $dark-palette-border-color;
-  color: $dark-palette-color;
+  border-color: $grey-50;
+  color: $text;
 
   a {
-    color: $dark-palette-link-color;
+    color: $link;
 
     &:hover {
-      color: darken($dark-palette-link-color, 10%);
+      color: $link-hover;
     }
   }
 }
 
 %dark-palette-bg {
-  background-color: $dark-palette-bg;
+  background-color: $grey-700;
 }
