--- a/packages/storybook-html/stories/components/icon/icon.scss
+++ b/packages/storybook-html/stories/components/icon/icon.scss
@@ -29,7 +29,7 @@
       &__label {
         border-top: 1px solid core.$grey-300;
         padding-top: core.$space-s;
-        color: core.$uq-neutral-dark40;
+        color: core.$grey-700;
         line-height: 1;
       }
     }
