--- a/packages/storybook-html/stories/patterns/form-validation/examples/password-reset.scss
+++ b/packages/storybook-html/stories/patterns/form-validation/examples/password-reset.scss
@@ -10,18 +10,18 @@
 
   &-text {
     &-rating {
-      color: #9c6b00;
+      color: core.$warning-500;
     }
 
     &--fail {
       .story-password-strength-meter-text-rating {
-        color: core.$alert;
+        color: core.$error-500;
       }
     }
 
     &--strong {
       .story-password-strength-meter-text-rating {
-        color: #2ea836;
+        color: core.$success-500;
       }
     }
   }
@@ -42,19 +42,19 @@
       }
 
       &.fill {
-        background-color: #9c6b00;
+        background-color: core.$warning-500;
       }
     }
 
     &--fail {
       span.fill {
-        background-color: core.$alert;
+        background-color: core.$error-500;
       }
     }
 
     &--strong {
       span.fill {
-        background-color: #2ea836;
+        background-color: core.$success-500;
       }
     }
   }
