--- a/packages/app-maps/src/scss/_component.scss
+++ b/packages/app-maps/src/scss/_component.scss
@@ -721,16 +721,8 @@ $-result-icon-spacing: $-icon-spacing;
           rgba(core.$white, 0)
         ),
         linear-gradient(to top, core.$white, rgba(core.$white, 0)),
-        linear-gradient(
-          to bottom,
-          core.$grey-50,
-          rgba(core.$grey-50, 0)
-        ),
-        linear-gradient(
-          to top,
-          core.$grey-50,
-          rgba(core.$grey-50, 0)
-        );
+        linear-gradient(to bottom, core.$grey-50, rgba(core.$grey-50, 0)),
+        linear-gradient(to top, core.$grey-50, rgba(core.$grey-50, 0));
       background-position: 0 0, 0 100%, 0 0, 0 100%;
       background-repeat: no-repeat;
       background-color: core.$white;
