--- a/packages/card/src/scss/_global.scss
+++ b/packages/card/src/scss/_global.scss
@@ -30,13 +30,11 @@
       padding-bottom: 1rem;
       border: none;
       border-bottom: 1px solid core.$grey-200;
-      box-shadow: 0 core.$space-xs core.$space-xs
-        rgba(core.$grey-900, 0);
+      box-shadow: 0 core.$space-xs core.$space-xs rgba(core.$grey-900, 0);
 
       &:hover,
       &:focus {
-        box-shadow: 0 core.$space-s core.$space-s
-          rgba(core.$grey-900, 0.1);
+        box-shadow: 0 core.$space-s core.$space-s rgba(core.$grey-900, 0.1);
       }
 
       .uq-card__image__wrapper {
