feat: new colour variables

--- a/packages/core/src/scss/_partials/_colour-constants.scss
+++ b/packages/core/src/scss/_partials/_colour-constants.scss
@@ -19,6 +19,7 @@ $uq-white: #fff;
 
 // UQ Secondary palette
 $uq-purple-light: #962a8b;
+$uq-purple-dark: #48206c;
 $uq-gold: #bb9d65;
 $uq-red: #e62645;
 $uq-orange: #eb602b;
@@ -33,6 +34,7 @@ $uq-darkgrey: #999490;
 
 // UQ Primary - Darken
 $uq-purple-dark10: darken($uq-purple, 10%); // #371853
+$uq-purple-650: #40205d;
 
 // UQ Secondary - Darken
 $uq-red-dark10: darken($uq-red, 10%); // #c31632
