remove unecessary text utility color classses and updated doco

--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -171,20 +171,8 @@ $use-encapsulation: false !default;
   // Typography utilities
   .text {
     // Text colour
-    &--reverse {
-      color: core.$white;
-    }
-
-    &--primary {
+    &--purple {
       color: core.$purple;
-    }
-
-    &--purple-light {
-      color: core.$purple-light;
-    }
-
-    &--black {
-      color: core.$black;
     }
 
     &--white {
