--- a/packages/hero/src/scss/_custom-properties.scss
+++ b/packages/hero/src/scss/_custom-properties.scss
@@ -2,16 +2,25 @@
 
 :root {
   --font-size-ul: #{core.$font-size-ul};
+
   --brand-purple-gradient: linear-gradient(
     91deg,
     #{core.$uq-purple} 68.75%,
     #{core.$uq-purple-light} 101.54%
   );
+
+  --hero-spacing: #{core.$space-ul};
+  --hero-basic-spacing: #{core.$space-uuul};
+
+  --hero-aspect-ratio: 2.35 / 1;
+  --hero-large-aspect-ratio: 3 / 2;
 }
 
 // Resize custom properties for tablet/mobile.
 @media #{core.$screen-lg-down} {
   :root {
     --font-size-ul: 30px;
+
+    --hero-basic-spacing: #{core.$space-xl};
   }
 }
