--- a/packages/storybook-html/stories/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/stories/components/intro/kitchen-sink.html
@@ -596,7 +596,7 @@
         <div class="uq-card">
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -618,7 +618,7 @@
         <div class="uq-card">
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -640,7 +640,7 @@
         <div class="uq-card">
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -662,7 +662,7 @@
         <div class="uq-card">
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-st-lucia-campus.jpg" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -691,7 +691,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-gatton-campus.jpg" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-gatton-campus.jpg" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -712,7 +712,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-gatton-campus.jpg" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-gatton-campus.jpg" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -733,7 +733,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-gatton-campus.jpg" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-gatton-campus.jpg" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -754,7 +754,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-gatton-campus.jpg" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-gatton-campus.jpg" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -781,7 +781,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-herston-campus.jpg" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-herston-campus.jpg" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -802,7 +802,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-herston-campus.jpg" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-herston-campus.jpg" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -823,7 +823,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-herston-campus.jpg" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-herston-campus.jpg" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
@@ -844,7 +844,7 @@
           <a class="uq-card__link" href="#">Card title</a>
           <div class="uq-card__image__wrapper">
             <div class="uq-card__image">
-              <img src="/images/card/card-example-herston-campus.jpg" alt="Card image description">
+              <img src="https://design-system.uq.edu.au/images/card/card-example-herston-campus.jpg" alt="Card image description">
             </div>
           </div>
           <div class="uq-card__content__wrapper">
