--- a/packages/layout/src/scss/_custom-properties.scss
+++ b/packages/layout/src/scss/_custom-properties.scss
@@ -4,13 +4,13 @@
 :root {
   --container-max-width: #{$container-max-width};
   --layout-gap: #{core.$space-xl};
-  --section-gap: #{core.$space-uul};
+  --section-gap: 6rem;
 }
 
 // Resize custom properties for tablet/mobile.
 @media #{core.$screen-lg-down} {
   :root {
     --layout-gap: #{core.$space-l};
-    --section-gap: #{core.$space-xl};
+    --section-gap: #{core.$space-uul};
   }
 }
